Adding tenitive data files

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,9 +23,7 @@
 	"customizations": {
 		"codespaces": {
 			"openFiles": [
-			  "workshop/README.md",
-			  "workshop/main.py",
-			  "workshop/check.py"
+			  "workshop/README.md"
 			]
 		},
 		"vscode": {
