Refined categorical chat mode

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,7 +40,8 @@
 				"GitHub.copilot",
 				"ms-toolsai.jupyter",
 				"mechatroner.rainbow-csv",
-				"ms-toolsai.datawrangler"
+				"ms-toolsai.datawrangler",
+				"ms-vscode.live-server"
 			]
 		}
 	}
